Fixed mobile responsive spacing

--- a/src/views/about/Team.scss
+++ b/src/views/about/Team.scss
@@ -17,7 +17,7 @@
 
   @media screen and (max-width: 767px) {
     margin-top: 64px;
-    margin-bottom: 64px;
+    margin-bottom: 0;
     padding-bottom: 0;
   }
 
